--- a/app/scss/common.scss
+++ b/app/scss/common.scss
@@ -78,6 +78,7 @@
     border-bottom-right-radius: 4px;
   }
   .toolbar{
+    display: inline-block;
     padding: 10px;
     background-color: #f0f4fb;
     width: 130px;
